syntax = "proto3";

package account;

option go_package = "github.com/danielhoward314/cloud-inventory/backend/protogen";

import "google/api/annotations.proto";
import "google/api/http.proto";

service AccountService {
  rpc Signup (SignupRequest) returns (SignupResponse) {
    option (google.api.http) = {
      post: "/v1/signup"
      body: "*"
    };
  }
}

message SignupRequest {
  string organization_name = 1;
  string primary_administrator_email = 2;
  string primary_administrator_name = 3;
}

message SignupResponse {
  string token = 1;
}